--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
   --background-body: #2E3A51;
   --titulos: #FFFFFF;
   --background-menu: #235982;
+  --titulo-projeto: #32639C;
+  --cinza-escuro: #282c34;
+  --background-card: #E8E8E8;
+  --cinza-medio: #5c636b;
+  --laranjado: #f4541c;
+  --mostarda:  #fcbc1c;
+
 }
 
 body {
