--- a/src/components/Template/Template.module.css
+++ b/src/components/Template/Template.module.css
@@ -20,30 +20,27 @@
      display: flex;
      flex-direction: column;
      align-items: center; 
-     color:var(--titulos);
-     font-family: 'Preahvihear', sans-serif;
      text-align: center;
      padding: 20px;
  } 
  article>p{
      margin-bottom: 1em;
+     color: var(--titulos);
+     font-family: 'Preahvihear', sans-serif;
+     padding: 0 20px;
  }
  
  @media only screen and (max-width: 767px) {
- 
      .container>h1{
          font-size: 20px;
       }
-   
    }
-   
    
    @media only screen and (min-width: 768px) and (max-width: 1023px) {
      .container>h1{
          font-size: 27px;
          margin: 7rem;
       }
-    
    }
    
    @media only screen and (min-width: 1024px) {
